Users Service and DTOs fixes
