# server/docs/swagger.json
@@ -98,13 +98,49 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/entity.User"
+                                "$ref": "#/definitions/dto.UserDTO"
                             }
                         }
                     }
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Create a new User",
+                "parameters": [
+                    {
+                        "description": "User DTO",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.CreateUserDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.UserDTO"
+                        }
+                    }
+                }
+            },
+            "patch": {
                 "security": [
                     {
                         "ApiKeyAuth": []
@@ -135,7 +171,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entity.User"
+                            "$ref": "#/definitions/dto.UserDTO"
                         }
                     }
                 }
@@ -158,11 +194,20 @@
                     "Users"
                 ],
                 "summary": "Get a single User based on the provided ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entity.User"
+                            "$ref": "#/definitions/dto.UserDTO"
                         }
                     }
                 }
@@ -322,8 +367,13 @@
                 }
             }
         },
-        "entity.User": {
+        "dto.UserDTO": {
             "type": "object",
+            "required": [
+                "fullname",
+                "id",
+                "username"
+            ],
             "properties": {
                 "birthDate": {
                     "type": "string"
@@ -350,9 +400,6 @@
                     "type": "string"
                 },
                 "lookingFor": {
-                    "type": "string"
-                },
-                "passwordHash": {
                     "type": "string"
                 },
                 "username": {
